// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return correctly with name 1`] = `
"interface I {
}"
`;

exports[`should return correctly with name, export 1`] = `
"export interface I {
}"
`;

exports[`should return correctly with name, export, generics, type, extends 1`] = `
"export interface I<T, U> extends X<boolean> {
    fn(): any;
    [key: string]: any;
}"
`;

exports[`should return correctly with name, extends 1`] = `
"interface I extends Y, Z {
}"
`;

exports[`should return correctly with name, generics 1`] = `
"interface I<T, U> {
}"
`;

exports[`should return correctly with name, type 1`] = `
"interface I {
    fn(): any;
    [key: string]: any;
}"
`;
